--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <img class="logo" src="https://maru0014.github.io/github-pages-sample/logo_header.png">
       </div>
       <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
-      </div>
     </div>
   </header>
   <div class="top-wrapper">
