--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>社員よりも社員らしく。</h1>
+      <p>情シス部門のタイムシェア「シェアード社員」。
+        成長企業の人材不足問題を補うと同時に個人の働き方を革新します。<br>
+        弊社社員の時間と知識をお客様と共有することで、貴社の成長を加速します。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
